--- a/pres_pqrsf.html
+++ b/pres_pqrsf.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PQRSF | Arca</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css'>
     <link rel="stylesheet" href="./css/pqrs.css">
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
     <link rel="shortcut icon" href="./assets/img/icons/logo.svg" />
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <div class="con-form-pqrs">
-        <form action="" method="post">
+        <form action="./neg_dat_pqrsf_store.php" enctype="multipart/form-data" method="post">
         <section class="head-form">
             <h2>Bienvenido al modulo de PQRSF</h2>
             <p>Este formulario esta destinado a presentar peticiones de cada usuario, responda los campos necesarios para hacer un mejor seguimiento de su petición.</p>
@@ -34,7 +34,7 @@
                 </div>
 
                 <div class="form-floating">
-                    <input type="number" class="form-control number-input" id="floatingInput" placeholder="Número de documento"   name="docuemnt">
+                    <input type="number" class="form-control number-input" id="floatingInput" placeholder="Número de documento"   name="docuemnt" required>
                     <label for="floatingInput">Número de documento</label>
                 </div>
                 
@@ -59,12 +59,12 @@
                 </div>
 
                 <div class="form-floating">
-                    <input type="number" class="form-control number-input" id="floatingInput" placeholder="Número de documento"  name="phonenum">
+                    <input type="number" class="form-control number-input" id="floatingInput" placeholder="Celular"  name="phonenum" required>
                     <label for="floatingInput">Celular</label>
                 </div>
 
                 <div class="form-floating">
-                    <input type="number" class="form-control number-input" id="floatingInput" placeholder="Número de documento"  name="phonenum">
+                    <input type="number" class="form-control number-input" id="floatingInput" placeholder="Telefono Fijo"  name="telnum">
                     <label for="floatingInput">Teléfono fijo</label>
                 </div>
 
@@ -81,7 +81,7 @@
             </div>
             <div class="body-form-detail">
                 <div class="form-floating">
-                    <select class="form-select" id="floatingSelect" aria-label="Floating label select example" name="fk_pk_tipo_documentoU" required>
+                    <select class="form-select" id="floatingSelect" aria-label="Floating label select example" name="fk_pk_tipo_pqrsf" required>
                     <option value="1">Queja</option>
                     <option value="2">Felicitaciones</option>
                     <option value="3">Peticiones</option>
@@ -91,23 +91,41 @@
                     <label for="floatingSelect">Tipo de solicitud</label>
                 </div>
                 <div class="form-floating">
-                    <input type="date" class="form-control date-input" id="floatingInputValue" placeholder="Fecha de nacimiento" name="fecha_naci">
-                    <label for="floatingInputValue">Fecha de nacimiento</label>
+                    <input type="date" class="form-control date-input" id="floatingInputValue" placeholder="Fecha de radicacion" name="fecha_radi" required>
+                    <label for="floatingInputValue">Fecha de radicación</label>
                 </div>
                 <div class="form-floating">
-                    <input type="text" class="form-control" id="floatingInputValue" placeholder="Motivo del PQRSF" name="sg_apellido">
+                    <input type="text" class="form-control" id="floatingInputValue" placeholder="Motivo del PQRSF" name="motivo" required>
                     <label for="floatingInputValue">Motivo del PQRSF</label>
                 </div>
                 <div class="form-floating">
-                    <textarea class="form-control" placeholder="Detalle del PQRSF"></textarea>
+                    <textarea class="form-control" placeholder="Detalle del PQRSF" name="detalle" required></textarea>
                     <label for="floatingTextarea">Detalle del PQRSF</label>
                   </div>
+                  <div class="con-file">
+                      <input type="file" accept=".pdf" id="file" class="btn btn-primary" name="file" onchange="fileValidation(); selectFilePqrsf()">
+
+                      <label for="file" class="label-file">
+                        <div class="btn-adj"><p>Adjuntar soporte***</p></div>
+                        <div class="icon-clip"><i class="fi fi-rr-clip"></i></div>
+                        <div class="name-file"><p id="name-file" >Seleccionar archivos</p></div>
+                        
+                      </label>
+                  </div>
+                  <div class="alert-file">
+                      <p>*No es necesario adjuntar soporte.</p>
+                      <p>**Solo adjuntar Archivos PDF.</p>
+                  </div>
             </div>
-        </section>
-        <section class="foo-form">
 
         </section>
+        <section class="foo-form">
+            <a href="index.html">Volver</a>
+            <input type="submit" value="Enviar">
+        </section>
+
     </form>
     </div>
+    <script src="./js/main.js"></script>
 </body>
 </html>
