--- a/index.html
+++ b/index.html
@@ -4,170 +4,171 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arca</title>
-    <link rel="stylesheet" href="./css/index.css">
-    <link href="./assets/icons/css/uicons-solid-rounded.css" rel="stylesheet">
-    <meta name="description" content="Nació hace más de 13 años como una fundación que solo trabajaba en la rehabilitación integral de personas con discapacidad, pero cuando descubrió su misión en el mundo, decidió dirigir sus esfuerzos hacia la rehabilitación de la sociedad y trabajar por la inclusión social."/>
-    <meta name="keywords" content="Citas Médicas, Fundación, Arcángeles, Medicina">
-    <link rel="stylesheet" href="./css/main.css" />
-    <link rel="shortcut icon" href="./assets/img/Logos/Logo TEXT.svg">
+    <title>Arca | Página inicial</title>
 </head>
 <body>
-    <main>
-        <div class="con-banner">
-        <!-- Sore banner-->
-            <header>
-                <nav>
-                        <a href="./index.html" class="item-menu"><img src="./assets/img/Logos/Logo TEXT.svg" alt=""></a>
-                        <a href="#Nosotros" class="item-menu">Nosotros</a>
-                        <a href="#Servicios" class="item-menu">Servicios</a>
-                        <a href="#Contacto" class="item-menu">Contacto</a>
-                        <a href="./pres_login.php" class="item-menu btn-menu">Ingresar</a>
+    <div class="container-main">
+        <div class="banner">
+            <div class="header">
+
+                <nav class="nav">
+                    <a class="item-menu"><img src="./assets/img/icons/logoW.svg" alt=""></a>
+                    <a class="item-menu">Sobre Nosotros</a>
+                    <a class="item-menu">Servicios</a>
+                    <a class="item-menu">Contacto</a>
+                    <a class="item-menu" href="">INGRESAR</a>
                 </nav>
-            </header>
-            <div class="banner">
-                <section class="top-banner">
-                    <h1>Por un mundo inclusivo</h1>
+
+            </div>
+            <div class="body-banner">
+
+                <div class="info-banner">
+                    <h2>Por un mundo inclusivo</h2>
                     <p>Fomentamos la inclusión a partir de la obtención de condiciones óptimas de salud a través de programas de rehabilitación dirigidos por un equipo especializado.</p>
-                </section>
-                <section class="bottom-banner">
-                    <a href="./pres_login.php">Reserva Cita</a>
-                    <a href="#Contacto" class="con-ba">Contactanos</a>
-                </section>
+                </div>
+                <div class="con-btn-banners">
+                    <a href="">Contáctanos</a>
+                    <a href="">Agendar cita</a>
+                </div>
+
             </div>
         </div>
-        <!-- Sobre Nosotros -->
-        <a name="Nosotros">
-            <article class="con-about">
-                <span>
-                    <h2>Sobre Nosotros</h2>
-                    <hr>
-                </span>
-                <section>
-                    <h3>Misión</h3>
-                    <p>Reconocemos la diversidad y empoderamos a las personas con discapacidad, a través de la rehabilitación y el deporte, para promover la inclusión económica, social y laboral.</p>
-                </section>
-                <section class="s2">
-                    <h3>Visión</h3>
-                    <p>Trasformar los paradigmas alrededor de la discapacidad, aportando a la construcción de un país más inclusivo para las futuras generaciones.</p>
-                </section>
-            </article>
-        </a>
-        <!-- Servicios -->
-        <a name="Servicios">
-            <article class="services">
-                <span>
-                    <h2>Servicios</h2>
-                    <hr>
-                </span>
-                <section class="cards-services col-cards-one">
-                    <figure>
-                        <img src="./assets/img/Rectangle 14.png" alt="">
-                    </figure>
-                    <span class="text-cards">
-                        <h3>Fisioterapia</h3>
-                        <p>Trabajamos para reducir el dolor, mejorar el movimiento y ayudar a las personas a retomar sus actividades cotidianas. Usamos una combinación de técnicas para aliviar el dolor y mejorar la coordinación, la fuerza y la resistencia.</p>
-                    </span>
-                </section>
-                <section class="cards-services col-cards-two">
-                    <figure>
-                        <img src="./assets/img/Rectangle 17.png" alt="">
-                    </figure>
-                    <span class="text-cards">
-                        <h3>Fonoaudiologia</h3>
-                        <p>Dotamos a nuestros pacientes de estrategias de comunicación y le ayudamos a comprenderlas de manera útil para que las pongan en práctica durante su vida diaria.</p>
-                    </span>
-                </section>
-                <section class="cards-services col-cards-three">
-                    <figure>
-                        <img src="./assets/img/Rectangle 19-1.png" alt="">
-                    </figure>
-                    <span class="text-cards">
-                        <h3>Terapia Ocupacional</h3>
-                        <p>Mejoramos la capacidad del individuo para realizar las actividades básicas de cuidado personal, el trabajo productivo y las actividades de ocio. Se incluyen las actividades diarias básicas y las más complejas.</p>
-                    </span>
-                </section>
-                <section class="cards-services col-cards-four">
-                    <figure>
-                        <img src="./assets/img/Rectangle 19.png" alt="">
-                    </figure>
-                    <span class="text-cards">
-                        <h3>Psicologia</h3>
-                        <p>Estamos comprometidos con orientar a nuestros pacientes para mejorar su calidad de vida, creamos espacios llenos de confianza que ayudaran a sanar tu vida y ser una mejor versión de ti mismo.</p>
-                    </span>
-                </section>
-            </article>
-        </a>
-        <!-- Contacto -->
-        <a name="Contacto">
-            <article class="contacto">
-                <span>
-                    <h2>Contacto</h2>
-                    <hr>
-                </span>
-                <section class="redes">
-                    <div class="con-red-s">
-                        <figure><img src="./assets/img/facebook 1.svg" alt=""></figure>
+        <div class="con-comment">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error explicabo repellendus aspernatur quasi amet, quis sit quibusdam vero id doloribus nihil harum, assumenda at soluta rerum iusto ut aperiam dolore.
+        </div>
+        <div class="con-info-about">
+            <div class="info-about-h">
+                <h3>Sobre nosotros</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit mollitia hic numquam, animi veniam aliquid distinctio accusamus quia ut fuga itaque maiores eos quae necessitatibus temporibus impedit dicta consequatur culpa.</p>
+            </div>
+            <div class="info-about-b">
+                <div class="card">
+                    <div class="card-h"><h2>Misión</h2></div>
+                    <div class="card-b">
+                        <p>Empoderar a las personas con discapacidad, a través de la rehabilitación y el deporte.</p>
                     </div>
-                    <div class="name-red-s">
-                        <a href="#">Arcángeles Fundación</a>
+                </div>
+                <div class="card">
+                    <div class="card-h">Visión</div>
+                    <div class="card-b">
+                        <p>Trasformar los paradigmas alrededor de la discapacidad.</p>
                     </div>
-                    <div class="con-red-s">
-                        <figure><img src="./assets/img/gorjeo 1.svg" alt=""></figure>
+                    
+                </div>
+                <div class="card">
+                    <div class="card-h">Valores</div>
+                    <div class="card-b">
+                        <ul>
+                            <li>Compromiso</li>
+                            <li>Transparencia</li>
+                            <li>Creatividad</li>
+                            <li>Pasión</li>
+                        </ul>
                     </div>
-                    <div class="name-red-s">
-                        <a href="#">@FundArcangeles</a>
+                    
+                </div>
+            </div>
+        </div>
+        <div class="service">
+            <section class="sect-serv-l">
+                <img src="./assets/img/icons/img-doctor.svg" alt="">
+            </section>
+            <section class="sect-serv-r">
+                <div class="info-serv">
+                    <h4>Estamos para ayudarte</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic, itaque! Illum quas quo et nesciunt animi doloribus veritatis sequi dolores! Omnis molestiae eos ducimus temporibus ratione dolores qui, delectus debitis!</p>
+                </div>
+                <div class="con-cards-ser">
+                    <div class="card-s">
+                        <div class="card-s-h">
+                            <img src="./assets/img/icons/SF.svg" alt="">
+                        </div>
+                        <div class="card-s-b">
+                            <div class="card-s-t">
+                                <h5>Fisioterapia</h5>
+                            </div>
+                            <div class="card-s-i">
+                                <p>Trabajamos para reducir el dolor, mejorar el movimiento y ayudar a las personas a retomar sus actividades cotidianas.</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="con-red-s">
-                        <figure><img src="./assets/img/ubicacion 1.svg" alt=""></figure>
+                    <div class="card-s">
+                        <div class="card-s-h"><img src="./assets/img/icons/SFG.svg" alt=""></div>
+                        <div class="card-s-b">
+                            <div class="card-s-t">
+                                <h5>Fonoaudiología</h5>
+                            </div>
+                            <div class="card-s-i">
+                                <p>Dotamos estrategias de comunicación y ayudamos a comprenderlas para usarlas durante su vida diaria.</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="name-red-s">
-                        <a href="#">Calle 106 No. 17a – 43</a>
+                    <div class="card-s">
+                        <div class="card-s-h"><img src="./assets/img/icons/STO.svg" alt=""></div>
+                        <div class="card-s-b">  
+                            <div class="card-s-t">
+                                <h5>Terapia Ocupacional</h5>
+                            </div>
+                            <div class="card-s-i">
+                                <p>Mejoramos la capacidad para realizar actividades básicas de cuidado personal, trabajo productivo y actividades de ocio.</p>
+                            </div>
+                        </div>
                     </div>
-                </section>
-            </a>
-
-            <form action="">
-                <input type="text" name="" id="name-user" placeholder="Nombre">
-                <input type="email" name="" id="email-user" placeholder="Correo Electrónico">
-                <textarea name="" id="message-user" cols="30" rows="10">  Mensaje</textarea>
-                <input type="submit" value="Envíar mensaje" id="btn-contacto">
-            </form>
-        </article>
-        <article class="map-fun">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7952.881205782493!2d-74.05143562537465!3d4.693247982832162!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9ab94f8efb21%3A0x6eb6f4d3a026bd51!2sFundaci%C3%B3n%20Arc%C3%A1ngeles!5e0!3m2!1ses!2sco!4v1655860793928!5m2!1ses!2sco" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </article>
+                    <div class="card-s">
+                        <div class="card-s-h"><img src="./assets/img/icons/SP.svg" alt=""></div>
+                        <div class="card-s-b">
+                            <div class="card-s-t">
+                                <h5>Psicologia</h5>
+                            </div>
+                            <div class="card-s-i">
+                                <p>Creamos espacios llenos de confianza que ayudaran a sanar su vida y ser una mejor versión de si mismo.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <div class="con-contactus">
+            <section class="sect-cu-l">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.4482266205778!2d-74.0516921846927!3d4.69190974303881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9ab94f8efb21%3A0x6eb6f4d3a026bd51!2sFundaci%C3%B3n%20Arc%C3%A1ngeles!5e0!3m2!1ses!2sco!4v1675711565401!5m2!1ses!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </section>
+            <section class="sect-cu-r">
+                <div class="con-cu-h"></div>
+                <div class="con-cu-b">
+                    <p>
+                        Contáctanos en todas nuestras líneas de información.
+                        <br>
+                        TÉLEFONO: PBX (571) 629 7047
+                        EMAIL: info@arcangeles.org
+                    </p>
+                </div>
+                <div class="con-cu-f">
+                    <a href=""><img src="./assets/img/icons/facebook 1.svg" alt=""></a>
+                    <a href=""><img src="./assets/img/icons/twitter 1.svg" alt=""></a>
+                    <a href=""><img src="./assets/img/icons/instagram 1.svg" alt=""></a>
+                    <a href=""><img src="./assets/img/icons/youtube 1.svg" alt=""></a>
+                </div>
+            </section>
+        </div>
         <footer>
-            <section class="cell-footer">
-                <span class="head-foo">Contacto</span>
-                <hr>
-                <span class="body-foo">
-                    Dirección: Calle 106 No. 17a – 43 <br>
-                    Telefono: 310 6954924 <br>
-                    E-mail: info@arcangeles.org <br>
-                </span>
-            </section>
-            <section class="cell-footer">
-                <span class="head-foo">Accesos Rápidos</span>
-                <hr>
-                <span class="body-foo">
-                    <a href="">Inicio</a><br>
-                    <a href="">Sobre Nosotros</a><br>
-                    <a href="">Servicios</a><br>
-                    <a href="">Contacto</a><br>
-                </span>
-            </section>
-            <section class="cell-footer">
-                <span class="head-foo">Social</span>
-                <hr>
-                <span class="body-foo">
-                    <a href="http://facebook.com/fundacionarcangeles/" target="_blank">Facebook</a>
-                    <br>
-                    <a href="https://twitter.com/FundArcangeles" target="_blank">Twitter</a>
-                </span>
-            </section>
-            <span class="foo">Todos los derechos reservados © 2022</span>
+            <div class="con-logo-f">
+
+            </div>
+            <div class="short-f">
+
+            </div>
+            <div class="social-bar-f">
+                <a href=""><img src="./assets/img/icons/telefono 1.svg" alt=""></a>
+                <a href=""><img src="./assets/img/icons/email 1.svg" alt=""></a>
+                <a href=""><img src="./assets/img/icons/facebook (1) 1.svg" alt=""></a>
+                <a href=""><img src="./assets/img/icons/gorjeo 1.svg" alt=""></a>
+                <a href=""><img src="./assets/img/icons/instagram (2) 1.svg" alt=""></a>
+                <a href=""><img src="./assets/img/icons/youtube (1) 1.svg" alt=""></a>
+            </div>
+            <div class="rf">
+                Todos los derechos reservados © 2022
+            </div>
         </footer>
-    </main>
+    </div>
 </body>
 </html>
