Docs: Fix bug class user

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arca | Página inicial</title>
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
     <div class="container-main">
@@ -16,7 +18,7 @@
                     <a class="item-menu">Sobre Nosotros</a>
                     <a class="item-menu">Servicios</a>
                     <a class="item-menu">Contacto</a>
-                    <a class="item-menu" href="">INGRESAR</a>
+                    <a class="item-menu item-login" href="">INGRESAR</a>
                 </nav>
 
             </div>
@@ -27,36 +29,42 @@
                     <p>Fomentamos la inclusión a partir de la obtención de condiciones óptimas de salud a través de programas de rehabilitación dirigidos por un equipo especializado.</p>
                 </div>
                 <div class="con-btn-banners">
-                    <a href="">Contáctanos</a>
-                    <a href="">Agendar cita</a>
+                    <a href="" class="btn-banner">Contáctanos</a>
+                    <a href="" class="btn-banner">Agendar cita</a>
                 </div>
 
             </div>
         </div>
         <div class="con-comment">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error explicabo repellendus aspernatur quasi amet, quis sit quibusdam vero id doloribus nihil harum, assumenda at soluta rerum iusto ut aperiam dolore.
+            <div class="h-comment">
+                <h2>Comentarios</h2>
+                <hr>
+            </div>
+            <div class="b-comment">
+
+            </div>
         </div>
         <div class="con-info-about">
             <div class="info-about-h">
-                <h3>Sobre nosotros</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit mollitia hic numquam, animi veniam aliquid distinctio accusamus quia ut fuga itaque maiores eos quae necessitatibus temporibus impedit dicta consequatur culpa.</p>
+                <h2>Sobre nosotros</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit mollitia hic numquam, animi veniam aliquid distinctio accusamus.</p>
             </div>
             <div class="info-about-b">
                 <div class="card">
-                    <div class="card-h"><h2>Misión</h2></div>
+                    <div class="card-h"><h3>Misión</h3></div>
                     <div class="card-b">
                         <p>Empoderar a las personas con discapacidad, a través de la rehabilitación y el deporte.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card-h">Visión</div>
+                    <div class="card-h"><h3>Visión</h3></div>
                     <div class="card-b">
                         <p>Trasformar los paradigmas alrededor de la discapacidad.</p>
                     </div>
                     
                 </div>
                 <div class="card">
-                    <div class="card-h">Valores</div>
+                    <div class="card-h"><h3>Valores</h3></div>
                     <div class="card-b">
                         <ul>
                             <li>Compromiso</li>
@@ -75,8 +83,8 @@
             </section>
             <section class="sect-serv-r">
                 <div class="info-serv">
-                    <h4>Estamos para ayudarte</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic, itaque! Illum quas quo et nesciunt animi doloribus veritatis sequi dolores! Omnis molestiae eos ducimus temporibus ratione dolores qui, delectus debitis!</p>
+                    <h2>Estamos para ayudarte</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic, itaque! Illum quas quo et nesciunt animi doloribus.</p>
                 </div>
                 <div class="con-cards-ser">
                     <div class="card-s">
@@ -130,15 +138,12 @@
         </div>
         <div class="con-contactus">
             <section class="sect-cu-l">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.4482266205778!2d-74.0516921846927!3d4.69190974303881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9ab94f8efb21%3A0x6eb6f4d3a026bd51!2sFundaci%C3%B3n%20Arc%C3%A1ngeles!5e0!3m2!1ses!2sco!4v1675711565401!5m2!1ses!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </section>
-            <section class="sect-cu-r">
-                <div class="con-cu-h"></div>
+                <div class="con-cu-h"><h2>Contacto</h2><hr></div>
                 <div class="con-cu-b">
                     <p>
                         Contáctanos en todas nuestras líneas de información.
-                        <br>
-                        TÉLEFONO: PBX (571) 629 7047
+                        <br><br>
+                        TÉLEFONO: PBX (571) 629 7047 <br>
                         EMAIL: info@arcangeles.org
                     </p>
                 </div>
@@ -149,13 +154,20 @@
                     <a href=""><img src="./assets/img/icons/youtube 1.svg" alt=""></a>
                 </div>
             </section>
+            <section class="sect-cu-r">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.4482266205778!2d-74.0516921846927!3d4.69190974303881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9ab94f8efb21%3A0x6eb6f4d3a026bd51!2sFundaci%C3%B3n%20Arc%C3%A1ngeles!5e0!3m2!1ses!2sco!4v1675711565401!5m2!1ses!2sco" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </section>
         </div>
         <footer>
             <div class="con-logo-f">
-
+                <img src="./assets/img/icons/logoW.svg" alt="">
             </div>
             <div class="short-f">
-
+                <a href="">INICIO</a>
+                <a href="">SOBRE NOSOTROS</a>
+                <a href="">SERVICIOS</a>
+                <a href="">CONTACTO</a>
+                <a href="">PQRSF</a>
             </div>
             <div class="social-bar-f">
                 <a href=""><img src="./assets/img/icons/telefono 1.svg" alt=""></a>
@@ -163,7 +175,7 @@
                 <a href=""><img src="./assets/img/icons/facebook (1) 1.svg" alt=""></a>
                 <a href=""><img src="./assets/img/icons/gorjeo 1.svg" alt=""></a>
                 <a href=""><img src="./assets/img/icons/instagram (2) 1.svg" alt=""></a>
-                <a href=""><img src="./assets/img/icons/youtube (1) 1.svg" alt=""></a>
+                <a href=""m class="ico-yt"><img src="./assets/img/icons/youtube (1) 1.svg" alt=""></a>
             </div>
             <div class="rf">
                 Todos los derechos reservados © 2022
