--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a class="item-menu">Sobre Nosotros</a>
                     <a class="item-menu">Servicios</a>
                     <a class="item-menu">Contacto</a>
-                    <a class="item-menu item-login" href="">INGRESAR</a>
+                    <a class="item-menu item-login" href="./pres_login.php">INGRESAR</a>
                 </nav>
 
             </div>
@@ -30,7 +30,7 @@
                 </div>
                 <div class="con-btn-banners">
                     <a href="" class="btn-banner">Contáctanos</a>
-                    <a href="" class="btn-banner">Agendar cita</a>
+                    <a href="./pres_login.php" class="btn-banner">Agendar cita</a>
                 </div>
 
             </div>
