added comment section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,9 @@
     <title>Arca | Página inicial</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/swiper-bundle.min.css">
 </head>
+
 <body>
     <div class="container-main">
         <div class="banner">
@@ -26,7 +29,8 @@
 
                 <div class="info-banner">
                     <h2>Por un mundo inclusivo</h2>
-                    <p>Fomentamos la inclusión a partir de la obtención de condiciones óptimas de salud a través de programas de rehabilitación dirigidos por un equipo especializado.</p>
+                    <p>Fomentamos la inclusión a partir de la obtención de condiciones óptimas de salud a través de
+                        programas de rehabilitación dirigidos por un equipo especializado.</p>
                 </div>
                 <div class="con-btn-banners">
                     <a href="" class="btn-banner">Contáctanos</a>
@@ -40,31 +44,169 @@
                 <h2>Comentarios</h2>
                 <hr>
             </div>
-            <div class="b-comment">
+            <div class="container-comment">
+                <div class="slide-container swiper">
+                    <div class="slide-content">
+                        <div class="card-wrapper swiper-wrapper">
+                            <div class="card swiper-slide">
+                                <div class="image-content">
+                                    <div class="card-image">
+                                        <img src="assets/img/profile1.jpg" alt="" class="card-img">
+                                    </div>
+                                </div>
+                                <div class="card-content">
+                                    <h3 class="name">Diana Torres</h3>
+                                    <p class="description">Hemos visto un gran cambio en mi hija, el apoyo que ha tenido
+                                        es grandioso, están al pendiente del desarrollo, las evoluciones, de todos los
+                                        cambios que atraviesan, todo ha sido muy positivo.</p>
+                                </div>
+                            </div>
 
+                            <div class="card swiper-slide">
+                                <div class="image-content">
+                                    <div class="card-image">
+                                        <img src="assets/img/profile2.jpg" alt="" class="card-img">
+                                    </div>
+                                </div>
+                                <div class="card-content">
+                                    <h3 class="name">Jhon Moreno</h3>
+                                    <p class="description">Siento en mi hijo un avance muy importante en el desarrollo,
+                                        la parte cognitiva y en la relación con el entorno. Para el este espacio es muy
+                                        agradable y es muy feliz.</p>
+                                </div>
+                            </div>
+
+                            <div class="card swiper-slide">
+                                <div class="image-content">
+                                    <div class="card-image">
+                                        <img src="assets/img/profile3.jpg" alt="" class="card-img">
+                                    </div>
+                                </div>
+                                <div class="card-content">
+                                    <h3 class="name">Ruth Garcia</h3>
+                                    <p class="description">La amabilidad y cariño para con los pacientes y acompañantes.
+                                        El sentido de pertenencia por la fundación. Dios los bendiga.</p>
+                                </div>
+                            </div>
+
+                            <div class="card swiper-slide">
+                                <div class="image-content">
+                                    <div class="card-image">
+                                        <img src="assets/img/profile4.jpg" alt="" class="card-img">
+                                    </div>
+                                </div>
+                                <div class="card-content">
+                                    <h3 class="name">Sofia Quintero</h3>
+                                    <p class="description">Es un lugar lleno de gente hermosa. El mejor lugar en
+                                        atención de personas para personas con discapacidad. Me ha cambiado la vida!
+                                        Gracias, gracias, gracias!</p>
+                                </div>
+                            </div>
+
+                            <div class="card swiper-slide">
+                                <div class="image-content">
+                                    <div class="card-image">
+                                        <img src="assets/img/profile5.jpg" alt="" class="card-img">
+                                    </div>
+                                </div>
+                                <div class="card-content">
+                                    <h3 class="name">David Aguirre</h3>
+                                    <p class="description">Muy bonita la labor social que realizan. Excelente
+                                        acompañamiento en el proceso, es muy bueno su apoyo.</p>
+                                </div>
+                            </div>
+
+                            <div class="card swiper-slide">
+                                <div class="image-content">
+                                    <div class="card-image">
+                                        <img src="assets/img/profile7.jpg" alt="" class="card-img">
+                                    </div>
+                                </div>
+                                <div class="card-content">
+                                    <h3 class="name">Blanca Martinez</h3>
+                                    <p class="description">Un lugar lleno de profesionales que te acogen y te animan a
+                                        superar las limitaciones físicas por consecuencia de una cirugía o
+                                        accidente.¡Que nota!
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="card swiper-slide">
+                                <div class="image-content">
+                                    <div class="card-image">
+                                        <img src="assets/img/profile6.jpg" alt="" class="card-img">
+                                    </div>
+                                </div>
+                                <div class="card-content">
+                                    <h3 class="name">Jeisson Lara</h3>
+                                    <p class="description">Tuve el privilegio de tener por un año a mis padres en este
+                                        centro, en donde la atención es maravillosa para los pacientes y familiares.</p>
+                                </div>
+                            </div>
+
+                            <div class="card swiper-slide">
+                                <div class="image-content">
+                                    <div class="card-image">
+                                        <img src="assets/img/profile8.jpg" alt="" class="card-img">
+                                    </div>
+                                </div>
+                                <div class="card-content">
+                                    <h3 class="name">Juan Beltran</h3>
+                                    <p class="description">Buena atención a los pacientes,se nota que aman lo que hacen.
+                                        Muy profesionales. Lo recomiendo.</p>
+                                </div>
+                            </div>
+
+                            <div class="card swiper-slide">
+                                <div class="image-content">
+                                    <div class="card-image">
+                                        <img src="assets/img/profile9.jpg" alt="" class="card-img">
+                                    </div>
+                                </div>
+                                <div class="card-content">
+                                    <h3 class="name">Alejandra Leon</h3>
+                                    <p class="description">Yo asisto aquí a diario y la verdad adoro éste lugar, porque
+                                        te hacen sentir seguro y el personal es muy profesional. Lugar muy bonito y
+                                        organizado. Excelente.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="swiper-button-next swiper-navBtn"></div>
+                    <div class="swiper-button-prev swiper-navBtn"></div>
+                    <div class="swiper-pagination"></div>
+                </div>
             </div>
         </div>
         <div class="con-info-about">
             <div class="info-about-h">
                 <h2>Sobre nosotros</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit mollitia hic numquam, animi veniam aliquid distinctio accusamus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit mollitia hic numquam, animi veniam
+                    aliquid distinctio accusamus.</p>
             </div>
             <div class="info-about-b">
-                <div class="card">
-                    <div class="card-h"><h3>Misión</h3></div>
+                <div class="card-c">
+                    <div class="card-h">
+                        <h3>Misión</h3>
+                    </div>
                     <div class="card-b">
                         <p>Empoderar a las personas con discapacidad, a través de la rehabilitación y el deporte.</p>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="card-h"><h3>Visión</h3></div>
+                <div class="card-c">
+                    <div class="card-h">
+                        <h3>Visión</h3>
+                    </div>
                     <div class="card-b">
                         <p>Trasformar los paradigmas alrededor de la discapacidad.</p>
                     </div>
-                    
+
                 </div>
-                <div class="card">
-                    <div class="card-h"><h3>Valores</h3></div>
+                <div class="card-c">
+                    <div class="card-h">
+                        <h3>Valores</h3>
+                    </div>
                     <div class="card-b">
                         <ul>
                             <li>Compromiso</li>
@@ -73,7 +215,7 @@
                             <li>Pasión</li>
                         </ul>
                     </div>
-                    
+
                 </div>
             </div>
         </div>
@@ -84,7 +226,8 @@
             <section class="sect-serv-r">
                 <div class="info-serv">
                     <h2>Estamos para ayudarte</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic, itaque! Illum quas quo et nesciunt animi doloribus.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic, itaque! Illum quas quo et nesciunt
+                        animi doloribus.</p>
                 </div>
                 <div class="con-cards-ser">
                     <div class="card-s">
@@ -96,7 +239,8 @@
                                 <h5>Fisioterapia</h5>
                             </div>
                             <div class="card-s-i">
-                                <p>Trabajamos para reducir el dolor, mejorar el movimiento y ayudar a las personas a retomar sus actividades cotidianas.</p>
+                                <p>Trabajamos para reducir el dolor, mejorar el movimiento y ayudar a las personas a
+                                    retomar sus actividades cotidianas.</p>
                             </div>
                         </div>
                     </div>
@@ -107,18 +251,20 @@
                                 <h5>Fonoaudiología</h5>
                             </div>
                             <div class="card-s-i">
-                                <p>Dotamos estrategias de comunicación y ayudamos a comprenderlas para usarlas durante su vida diaria.</p>
+                                <p>Dotamos estrategias de comunicación y ayudamos a comprenderlas para usarlas durante
+                                    su vida diaria.</p>
                             </div>
                         </div>
                     </div>
                     <div class="card-s">
                         <div class="card-s-h"><img src="./assets/img/icons/STO.svg" alt=""></div>
-                        <div class="card-s-b">  
+                        <div class="card-s-b">
                             <div class="card-s-t">
                                 <h5>Terapia Ocupacional</h5>
                             </div>
                             <div class="card-s-i">
-                                <p>Mejoramos la capacidad para realizar actividades básicas de cuidado personal, trabajo productivo y actividades de ocio.</p>
+                                <p>Mejoramos la capacidad para realizar actividades básicas de cuidado personal, trabajo
+                                    productivo y actividades de ocio.</p>
                             </div>
                         </div>
                     </div>
@@ -129,7 +275,8 @@
                                 <h5>Psicologia</h5>
                             </div>
                             <div class="card-s-i">
-                                <p>Creamos espacios llenos de confianza que ayudaran a sanar su vida y ser una mejor versión de si mismo.</p>
+                                <p>Creamos espacios llenos de confianza que ayudaran a sanar su vida y ser una mejor
+                                    versión de si mismo.</p>
                             </div>
                         </div>
                     </div>
@@ -138,7 +285,10 @@
         </div>
         <div class="con-contactus">
             <section class="sect-cu-l">
-                <div class="con-cu-h"><h2>Contacto</h2><hr></div>
+                <div class="con-cu-h">
+                    <h2>Contacto</h2>
+                    <hr>
+                </div>
                 <div class="con-cu-b">
                     <p>
                         Contáctanos en todas nuestras líneas de información.
@@ -155,7 +305,10 @@
                 </div>
             </section>
             <section class="sect-cu-r">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.4482266205778!2d-74.0516921846927!3d4.69190974303881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9ab94f8efb21%3A0x6eb6f4d3a026bd51!2sFundaci%C3%B3n%20Arc%C3%A1ngeles!5e0!3m2!1ses!2sco!4v1675711565401!5m2!1ses!2sco" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.4482266205778!2d-74.0516921846927!3d4.69190974303881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9ab94f8efb21%3A0x6eb6f4d3a026bd51!2sFundaci%C3%B3n%20Arc%C3%A1ngeles!5e0!3m2!1ses!2sco!4v1675711565401!5m2!1ses!2sco"
+                    style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
         </div>
         <footer>
@@ -175,12 +328,15 @@
                 <a href=""><img src="./assets/img/icons/facebook (1) 1.svg" alt=""></a>
                 <a href=""><img src="./assets/img/icons/gorjeo 1.svg" alt=""></a>
                 <a href=""><img src="./assets/img/icons/instagram (2) 1.svg" alt=""></a>
-                <a href=""m class="ico-yt"><img src="./assets/img/icons/youtube (1) 1.svg" alt=""></a>
+                <a href="" m class="ico-yt"><img src="./assets/img/icons/youtube (1) 1.svg" alt=""></a>
             </div>
             <div class="rf">
                 Todos los derechos reservados © 2022
             </div>
         </footer>
     </div>
+    <script src="./js/swiper-bundle.min.js"></script>
+    <script src="js/carousel.js"></script>
 </body>
+
 </html>
