Docs: Update pqrsf

--- a/pres_pqrsf_search.html
+++ b/pres_pqrsf_search.html
@@ -31,12 +31,12 @@
             </div>
             <div class="body-form">
                 <button class="btn-pqrsf">
-                    <a href="pres_pqrsf.html">Redactar PQRSF</a>
+                    <a href="./pres_pqrsf.html">Redactar PQRSF</a>
                     <div class="ico-input">
                         <img src="./assets/img/icons/write1.svg" alt="Presentar una PQRSF">
                     </div>
                 </button>
-                <form action="pres_neg_dat_pqrsf_search.php" method="get">
+                <form action="pres_neg_dat_pqrsf_search.php" method="post">
                     <div class="form-floating">
                         <input type="number" class="form-control number-input" id="floatingInput" placeholder="Número de radicado"   name="num_radicado" required>
                         <label for="floatingInput">Número de radicado</label>
